@@ -10,6 +10,7 @@
       <w>snackbar</w>
       <w>splashscreen</w>
       <w>sublicensable</w>
+      <w>transifex</w>
       <w>unelevated</w>
       <w>xlink</w>
       <w>zedler</w>
