@@ -2,7 +2,8 @@
 - New: completely rewritten and reorganized settings app
 - New: Android 12 support (not fully tested yet)
 - New: translation via Transifex (less than 80 strings to translate, link in About!)
-- Improved: theme selection
+- Improved: theme selection and internal wallpaper management
+- Fixed: incorrect zoom on lockscreen
 - Fixed: non-gesture navigation bar color in dialogs on Android 11 and higher
 
 3.5.1:
